fixed weird display issue on safari inside product-archive

--- a/scss/components/woocommerce/_product-archive.scss
+++ b/scss/components/woocommerce/_product-archive.scss
@@ -21,7 +21,7 @@
   }
 
   .product--small {
-    width: calc(25% - 11.3px);
+    width: calc((100% / 4) - ((3 * 15px) / 4));
     margin-right: 15px;
     margin-bottom: 20px;
     background: $color-neutral-brightest;
@@ -31,11 +31,11 @@
     transition: $transition;
 
     @media screen and (max-width: $breakpoint-medium-large) {
-      width: calc(33% - 6.9px);
+      width: calc((100% / 3) - ((2 * 15px) / 3));
     }
 
     @media screen and (max-width: $breakpoint-medium) {
-      width: calc(50% - 7.5px);
+      width: calc((100% / 2) - ((1 * 15px) / 2));
     }
 
     @media screen and (max-width: $breakpoint-small) {
